Removed table overflow fix because it will be fixed in Chrome 62 on Oct 17

--- a/src/less/components/utility.less
+++ b/src/less/components/utility.less
@@ -165,13 +165,6 @@
 
 .uk-overflow-auto > :last-child { margin-bottom: 0; }
 
-/*
- * Fix scrollbars caused by child content with box-shadows in Chrome 61
- * https://bugs.chromium.org/p/chromium/issues/detail?id=769697
- */
-
-.uk-overflow-auto > table { overflow: hidden; }
-
 
 /* Resize
  ========================================================================== */
